<resources>
    <string name="app_name">RemindMe</string>
    <string name="googleplay_url">https://play.google.com/store/apps/details?id=org.bogdan.remindme</string>

    <string name="str_search">Search</string>
    <string name="str_favourite">Favourite</string>
    <string name="str_remind">Reminds</string>
    <string name="str_arch">Archive</string>
    <string name="str_settings">Settings</string>
    <string name="str_help">Help</string>
    <string name="str_notification">Notification</string>
    <string name="str_birthday">Today Birhtday</string>
    <string name="str_birthday_menu">Birhtday</string>
    <string name="str_birthday_soon">Birhtday Soon(3day)</string>
    <string name="str_checkbox_text">Notify advance(3day)</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_History">History</string>
    <string name="tab_item_Calendar">Calendar</string>
    <string name="tab_item_Alarm_Clock">Alarm Clock</string>
    <string name="tab_item_Birthday">Birthday</string>

    <integer name="com_vk_sdk_AppId">5709828</integer>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_share_key">prefShareKey</string>
    <string name="pref_rate_review_key">prefRateReviewKey</string>

    <string name="share_to">Поделиться</string>
    <string name="subject">Рекомендую Приложение RemindMe!</string>
    <string name="message">Вы можете скачать приложение RemindMe для Android в </string>

    <string name="pref_app_title">О приложении</string>
    <string name="pref_app_summary">Приложение RemindMe,ничего не забывайте!</string>
    <string name="pref_version_title">Версия сборки</string>
    <string name="pref_version_summary">1.1</string>
    <string name="pref_developer_title">Разработчик</string>
    <string name="pref_developer_summary">Bohdan  Khrystov</string>
    <string name="pref_share_title">Поделитесь приложением</string>
    <string name="pref_share_summary">Расскажите друзьям об этом приложении</string>
    <string name="pref_rate_review_title">Поставьте оценку</string>
    <string name="pref_rate_review_summary">Оцените приложение и оставьте отзыв в GooglePlay</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="str_calendar">Calendar</string>
    <string name="str_alarm_clock">Alarm Clock</string>
    <string name="str_birthday_text">birthday:</string>
    <string name="str_next_birth">next birht:</string>
    <string name="birthday_big">Birthday:</string>
    <string name="toast_text1">Signal set on </string>
    <string name="toast_text_day"> Day </string>
    <string name="toast_text_hour"> Hour </string>
    <string name="toast_text_minute"> Minute </string>
    <string name="toast_text2">from current time</string>
    <string name="toast_text_less_minute">less minute</string>
    <string name="mn">Mn</string>
    <string name="ts">Ts</string>
    <string name="wd">Wd</string>
    <string name="th">Th</string>
    <string name="fr">Fr</string>
    <string name="st">St</string>
    <string name="sn">Sn</string>
    <string name="delete">Delete</string>
    <string name="toast_text3">Set aside 10 minutes</string>
    <string name="today">Today</string>
    <string name="on_off">On/Off</string>
    <string name="description">Description</string>
    <string name="repeat">Repeat</string>
    <string name="days">Days</string>
    <string name="sound">Sound</string>
    <string name="cancel">Cancel</string>
    <string name="set_aside">Set Aside</string>
    <string name="close">Close</string>
    <string name="tv_text">TextView</string>
    <string name="time">Time</string>
    <string name="tv_vk_not_load_text">Please restart app and login VK to see friends birthday list</string>
    <string name="Selebrate">Happy Birthday</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="txtNoAlarm">No alarm clock,add someone</string>
    <string name="message_send">Message send</string>
    <string name="tab_item_vk_login">VK Login</string>

</resources>
