<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_add_alarm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/primary_grad"

    tools:context="org.bogdan.remindme.activities.AddAlarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/primary_grad_reverse"
        android:layout_weight="2">

        <TimePicker
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/timePickerAddAlarm"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:timePickerMode="spinner"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/primary_grad_reverse"
        android:layout_weight="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:orientation="vertical">

        <android.support.v7.widget.SwitchCompat
        android:text="@string/on_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true" android:layout_weight="0"
        android:id="@+id/switch_on_off" />

        <android.support.v7.widget.AppCompatEditText
            android:hint="@string/description"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:maxLength="16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|bottom"
            android:layout_weight="1"
            android:id="@+id/textViewDescription" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relative_btn_repeat"
            android:layout_weight="1">


            <android.support.v7.widget.AppCompatButton
            android:text="@string/repeat"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="left|top"
            android:id="@+id/btn_repeat" />

            <android.support.v7.widget.AppCompatTextView
                android:hint="@string/days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/textRepeatDays" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <android.support.v7.widget.AppCompatButton
                android:text="@string/sound"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
                android:gravity="left|top"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/btn_sound" />

            <android.support.v7.widget.AppCompatTextView
                android:hint="@string/sound"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|left"
                android:layout_marginLeft="13dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/textSound" />
        </FrameLayout>

    </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_weight="0">

            <android.support.v7.widget.AppCompatButton
                android:text="@string/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_cancel"
                android:height="75dip"

                android:layout_weight="1"/>

            <android.support.v7.widget.AppCompatButton
                android:text="OK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/btn_ok"
                android:height="75dip"
                android:layout_weight="1"/>

    </LinearLayout>

    </LinearLayout>

</LinearLayout>

